--- a/.gitconfig
+++ b/.gitconfig
@@ -62,7 +62,7 @@
 
 [apply]
     # Detect whitespace errors when applying a patch
-    whitespace = fix
+    #whitespace = fix
 
 [core]
     # Use custom `.gitignore` and `.gitattributes`
